Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.67
	* Brought back the message notification plugin (Brian Tarricone)
	  You'll need to reconfigure your settings for this plugin
	* IRC protocol plugin rewritten (Ethan Blanton)
	* Various dialog rewrites (Jabber vCard, Add Group, Alias Chat,
	  Rename Group, Privacy)
	* Shows "hiptop" icon for AIM buddies using hiptop
	  devices (Robey Pointer)
	* Privacy core/UI split.
	* Various bug fixes (larne from irc, Tim Ringenbach, Bjoern 
	  Voigt, Paul A (darkrain))
	* British English "translation" updated (Sam Halliday)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Danish translation updated (Morten Brix Pedersen)
	* Dutch translation updated (Vincent van Adrighem)
	* German translation updated (Bjoern Voigt)
	* Hindi translation added (Guntupalli Karunakar)
	* Hungarian translation updated (Zoltan Sutto)
	* Italian translation updated (Luca Beltrame, Claudio Satriano)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos
	  Rodrigues Collares Neto)
	* Romanian translation updated (Misu Moldovan (dumol))
	* Serbian translation updated (Danilo Segan)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena)

version 0.66 (07/18/2003):
	* Freebsd compile fix (Matthew Luckie)
	* .spec file improvements (Ethan Blanton)
	* Added a gaim-remote man page (Robert McQueen)
	* The Remote Control plugin no longer adds duplicate groups to your
	  buddy list.
	* Servers and ports are now imported correctly in MSN.
	* Core/UI split the core initialization and shutdown.
	* MSN messages with newlines are now sent correctly to MSN clients.
	* Italian translation updated (Claudio Satriano)
	* British English "translation" added (Sam Halliday)
	* Fix some sound initialization stuff
	* Updated  Portuguese (Brazilian) translation
	  (Mauricio de Lemos Rodrigues Collares Neto)
	* Updated Czech translation (Miloslav Trmac)